Updated CMS project